--- a/checkout.html
+++ b/checkout.html
@@ -41,6 +41,9 @@
 								<i class="fas fa-shopping-cart color-icon menu-cart-icon"></i>
 								<span class="badge bg-danger badge-cart">0</span>
 							</a>
+							<div class="navigation">
+								<i class="fas fa-bars"></i>
+							</div>
 						</div>
 					</li>
 				</ul>
